force-app/main/default/objects/Donation__c/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <label>Donation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Clothes</fullName>
            </value>
            <value>
                <fullName>Money</fullName>
            </value>
            <value>
                <fullName>Medicines</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>