force-app/main/default/objects/Donation__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donor</label>
    <referenceTo>Donor_c__c</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>