force-app/main/default/objects/Donation__c/validationRules/Prevent_negative_or_zero_donations.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_negative_or_zero_donations</fullName>
    <active>true</active>
    <errorConditionFormula>Donation_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Donation amount must be greater than zero</errorMessage>
</ValidationRule>